# story_to_script

./: .env.example  .gitignore  DEMO.md  Makefile  README.md  design.md  pyproject.toml  requirements.txt  yaml_schema.md
samples/: script.yaml  story.txt
story2script/: __init__.py  ai_service.py  app.py  character_extractor.py  config.py  db.py  dialogue_generator.py  parser.py  pipeline.py  prompts.py  quality_checker.py  scene_planner.py  schema.py  script_generator.py  yaml_exporter.py
story2script/fixtures/: dialogue_s10_conservative.1c3ceeb25ebecbbb.json  dialogue_s11_conservative.52042ab3b7ac6861.json  dialogue_s12_conservative.577ac9fe76536459.json  dialogue_s13_conservative.e244fcf5f80781e5.json  dialogue_s14_conservative.6b165a2d15bf344b.json  dialogue_s15_conservative.a5ddc8c5c62445c1.json  dialogue_s16_conservative.089d2edb0a13ffcc.json  dialogue_s17_conservative.2dcb99af78ea5e8e.json  dialogue_s18_conservative.a0da83002ea848a0.json  dialogue_s19_conservative.1e352601e3fb949f.json  dialogue_s1_conservative.a6aea8d3454ea17e.json  dialogue_s20_conservative.2efd519940066f76.json  dialogue_s21_conservative.fa876a2f63bbf480.json  dialogue_s22_conservative.f02f162c0c8e325d.json  dialogue_s23_conservative.8d1f6422b012b40f.json  dialogue_s24_conservative.45b497b0e0c4de71.json  dialogue_s25_conservative.adc57aa583c54065.json  (+25 more)
story2script/static/: graph.js  (+1 more)
tests/: conftest.py  test_ai_service.py  test_app.py  test_character_extractor.py  test_db.py  test_dialogue_generator.py  test_parser.py  test_quality_checker.py  test_scene_planner.py  test_script_yaml.py
(+5 files in other folders)
